# web-server

./: README.md  bci-uscneuro.tech  flutter-site  gen_ssl.sh  nginx.conf  setup-script.sh
backend/: pubspec.yaml  serverfile  testserver.dart
backend/.dart_tool/: package_config.json
rust-backend/: .gitignore  Cargo.toml  data.csv
rust-backend/src/: main.rs
system-config/: authorized_keys  duckdns.sh  motd  sshd_config  system-config.sh
web-build/: flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  manifest.json
web-build/assets/: AssetManifest.bin.json  AssetManifest.json  FontManifest.json  NOTICES
