[package]
name    = "csv_uploader"
version = "0.1.0"
edition = "2021"    # still current

[dependencies]
actix-web = "4"
env_logger = "0.11.8"
log = "0.4.27"
once_cell = "1.19"
parking_lot = "0.12.3"
reqwest   = { version = "0.12", features = ["json", "rustls-tls"] }
serde     = { version = "1", features = ["derive"] }
serde_json = "1"

